--- a/index.html
+++ b/index.html
@@ -129,7 +129,11 @@
     <section id="contact" class="contact-section">
     <div class="container">
       <h2><span class="white-text">Contact</span> Me</h2>
-      <p>Email: amirshahzad37925@gmail.com | Phone: +92 306 3337 925</p>
+      <p>
+  Email: <a href="mailto:amirshahzad37925@gmail.com">amirshahzad37925@gmail.com</a> | 
+  Phone: <a href="tel:+923063337925">+92 306 3337 925</a>
+</p>
+
       <div class="social-icons">
         <a href="#"><i class="fab fa-facebook"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
