--- a/index.html
+++ b/index.html
@@ -43,14 +43,13 @@
       </ul>
     </nav>
     <div class="hero-text">
-      <h4>Welcome</h4>
-      <div class="text-slider">
-        <h1>I’m Aamir Shahzad</h1>
-        <h1>Lead Generation Specialist</h1>
-      </div>
-      <p>Specialized in Lead Generation, List Building, Sourcing and Social Media Marketing.</p>
-      <a href="#contact" class="btn">Hire Me</a>
-    </div>
+  <h4>Welcome</h4>
+  <h1>I’m Aamir Shahzad</h1>
+  <!-- 👇 yahan dynamic typing text aaega -->
+  <h2 class="typing-text"></h2>
+  <p>Specialized in Lead Generation, List Building, Sourcing and Social Media Marketing.</p>
+  <a href="#contact" class="btn">Hire Me</a>
+</div>
   </header>
 
   <!-- ABOUT SECTION -->
