--- a/index.html
+++ b/index.html
@@ -126,22 +126,46 @@
   <!-- FOOTER -->
   <footer>
     <section id="contact" class="contact-section">
-    <div class="container">
-      <h2><span class="white-text">Contact</span> Me</h2>
-      <p>
-  Email: <a href="mailto:amirshahzad37925@gmail.com">amirshahzad37925@gmail.com</a> | 
-  Phone: <a href="tel:+923063337925">+92 306 3337 925</a>
-</p>
+  <div class="container">
+    <h2><span class="white-text">Contact</span> Me</h2>
+    <p>
+      Email: 
+      <a href="mailto:amirshahzad37925@gmail.com">amirshahzad37925@gmail.com</a> 
+      | 
+      <a href="https://mail.google.com/mail/?view=cm&fs=1&to=amirshahzad37925@gmail.com" target="_blank">
+        <i class="fab fa-google"></i>
+      </a>
+      | 
+      Phone: <a href="tel:+923063337925">+92 306 3337 925</a>
+    </p>
 
-      <div class="social-icons">
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-medium"></i></a>
-        <a href="#"><i class="fas fa-users"></i></a>
-      </div>
+    <div class="social-icons">
+      <a href="https://www.facebook.com/aamir.ibn.al.mazhar" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a href="https://x.com/Aamir3337925" target="_blank"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.instagram.com/aamir_ibnalmazhar/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://medium.com/@amirshahzad37925" target="_blank"><i class="fab fa-medium"></i></a>
+      <a href="https://join.skype.com/invite/LkkvzG3eqi7S" target="_blank"><i class="fab fa-skype"></i></a>
     </div>
-  </section>
+  </div>
+</section>
+
+<style>
+  .social-icons a,
+  p a {
+    color: #fff; /* default white */
+    font-size: 24px;
+    margin: 0 10px;
+    transition: transform 0.3s ease, color 0.3s ease;
+  }
+
+  .social-icons a:hover,
+  p a:hover {
+    color: #1da1f2; /* hover color */
+    transform: scale(1.2);
+  }
+</style>
+
+
     <p style="margin:0; font-size:14px; color:#aaa;">© 2025 Aamir Shahzad | All Rights Reserved</p>
   </footer>
   <!-- ===== Footer End ===== -->
