--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
   <div class="container">
     <h2><span class="white-text">Contact</span> Me</h2>
     <p>
-      Email: 
-      <a href="mailto:amirshahzad37925@gmail.com">amirshahzad37925@gmail.com</a> 
+      Gmail: 
+      <a href="https://mail.google.com/mail/?view=cm&fs=1&to=amirshahzad37925@gmail.com">amirshahzad37925@gmail.com</a> 
       | 
       <a href="https://mail.google.com/mail/?view=cm&fs=1&to=amirshahzad37925@gmail.com" target="_blank">
         <i class="fab fa-google"></i>
@@ -152,8 +152,8 @@
 <style>
   .social-icons a,
   p a {
-    color: #fff; /* default white */
-    font-size: 24px;
+    color: #FFA500; /* default white */
+    font-size: 20px;
     margin: 0 10px;
     transition: transform 0.3s ease, color 0.3s ease;
   }
