--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
   /* Contact info (Gmail + Phone) */
   .contact-info {
     font-size: 20px;
-    font-weight: bold;
-    color: #FFA500;
+    font-weight: normal;
+    color: #fff;
   }
 
   .contact-info a {
     color: #FFA500;
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 17px;
+    font-weight: normal;
     margin: 0 5px;
     transition: transform 0.3s ease, color 0.3s ease;
   }
