--- a/index.html
+++ b/index.html
@@ -64,21 +64,42 @@
     <div class="service-box">
       <h3>Lead Generation</h3>
       <p>Helping businesses capture potential clients through smart funnels and campaigns.</p>
+      <ul class="service-points">
+        <li><i class="fas fa-check-circle"></i> Smart sales funnels</li>
+        <li><i class="fas fa-check-circle"></i> Targeted ad campaigns</li>
+        <li><i class="fas fa-check-circle"></i> High-quality leads</li>
+      </ul>
     </div>
     <div class="service-box">
       <h3>Lead List Building</h3>
       <p>Creating engaging ads and content strategies to boost online visibility and conversions.</p>
+      <ul class="service-points">
+        <li><i class="fas fa-check-circle"></i> Verified contact lists</li>
+        <li><i class="fas fa-check-circle"></i> Industry-specific targeting</li>
+        <li><i class="fas fa-check-circle"></i> Accurate & updated data</li>
+      </ul>
     </div>
     <div class="service-box">
       <h3>Email Marketing</h3>
       <p>Designing and executing campaigns that nurture leads and drive repeat sales.</p>
+      <ul class="service-points">
+        <li><i class="fas fa-check-circle"></i> Personalized campaigns</li>
+        <li><i class="fas fa-check-circle"></i> Automated follow-ups</li>
+        <li><i class="fas fa-check-circle"></i> Higher open & click rates</li>
+      </ul>
     </div>
     <div class="service-box">
       <h3>SEO Optimization</h3>
       <p>Improving website rankings with proven search engine strategies and keyword targeting.</p>
+      <ul class="service-points">
+        <li><i class="fas fa-check-circle"></i> On-page optimization</li>
+        <li><i class="fas fa-check-circle"></i> Keyword research</li>
+        <li><i class="fas fa-check-circle"></i> Backlink strategies</li>
+      </ul>
     </div>
   </div>
 </section>
+
 
 <!-- PORTFOLIO -->
 <section id="portfolio" class="portfolio">
