--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
 </section>
 
 <!-- SERVICES -->
+<!-- SERVICES -->
 <section id="services" class="services">
   <h2><span style="color:white;">My</span> <span>Services</span></h2>
   <div class="service-container">
+
     <div class="service-box">
       <h3>Lead Generation</h3>
       <p>Helping businesses capture potential clients through smart funnels and campaigns.</p>
@@ -70,6 +72,7 @@
         <li><i class="fas fa-check-circle"></i> High-quality leads</li>
       </ul>
     </div>
+
     <div class="service-box">
       <h3>Lead List Building</h3>
       <p>Creating engaging ads and content strategies to boost online visibility and conversions.</p>
@@ -79,6 +82,7 @@
         <li><i class="fas fa-check-circle"></i> Accurate & updated data</li>
       </ul>
     </div>
+
     <div class="service-box">
       <h3>Email Marketing</h3>
       <p>Designing and executing campaigns that nurture leads and drive repeat sales.</p>
@@ -88,6 +92,7 @@
         <li><i class="fas fa-check-circle"></i> Higher open & click rates</li>
       </ul>
     </div>
+
     <div class="service-box">
       <h3>SEO Optimization</h3>
       <p>Improving website rankings with proven search engine strategies and keyword targeting.</p>
@@ -97,6 +102,7 @@
         <li><i class="fas fa-check-circle"></i> Backlink strategies</li>
       </ul>
     </div>
+
   </div>
 </section>
 
