--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div class="about-text">
     <h2>About <span>Me</span></h2>
     <p> Myself <strong>Aamir Shahzad</strong> working as a <strong>Lead Generation Specialist</strong> with expertise in providing <strong>manually verified fresh data</strong> tailored to client needs. Whether it’s <strong>B2B or B2C leads</strong>, I ensure accuracy and relevance for maximum business growth. </p>
-    <p> I specialize in delivering leads across multiple industries including: Real Estate, E-commerce, Finance, Healthcare, and Education. Along with Lead Generation, I also provide <strong>Lead List Building</strong> and <strong>Web Research services</strong> to help businesses connect with the right audience. </p>
+    <p> I specialize in delivering leads across multiple industries, including: Real Estate, E-commerce, Finance, Healthcare, and Education. Along with Lead Generation, I also provide <strong>Lead List Building</strong> and <strong>Web Research services</strong> to help businesses connect with the right audience. </p>
     <ul class="info">
       <li><strong>Expertise:</strong> Lead Generation Specialist, LinkedIn, List Building, Sourcing</li>
       <li><strong>Email:</strong> amirshahzad37925@gmail.com</li>
@@ -77,7 +77,7 @@
       <h3>Lead List Building</h3>
       <p>Creating engaging ads and content strategies to boost online visibility and conversions.</p>
       <ul class="service-points">
-        <li><i class="fas fa-check-circle"></i> Verified contact lists</li>
+        <li><i class="fas fa-uncheck-circle"></i> Verified contact lists</li>
         <li><i class="fas fa-check-circle"></i> Industry-specific targeting</li>
         <li><i class="fas fa-check-circle"></i> Accurate & updated data</li>
       </ul>
