--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <h3>Lead List Building</h3>
       <p>Creating engaging ads and content strategies to boost online visibility and conversions.</p>
       <ul class="service-points">
-        <li><i class="fas fa-uncheck-circle"></i> Verified contact lists</li>
+        <li><i class="fas fa-check-circle"></i> Verified contact lists</li>
         <li><i class="fas fa-check-circle"></i> Industry-specific targeting</li>
         <li><i class="fas fa-check-circle"></i> Accurate & updated data</li>
       </ul>
