--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </div>
 </section>
 
-<!-- SERVICES -->
+
 <!-- SERVICES -->
 <section id="services" class="services">
   <h2><span style="color:white;">My</span> <span>Services</span></h2>
@@ -106,6 +106,28 @@
   </div>
 </section>
 
+<!-- COUNTER SECTION -->
+<section id="counter" class="counter-section">
+  <h2><span style="color:white;">My</span> <span>Stats</span></h2>
+  <div class="counter-container">
+    <div class="counter-box">
+      <h3 class="counter" data-target="250">0</h3>
+      <p>Projects Completed</p>
+    </div>
+    <div class="counter-box">
+      <h3 class="counter" data-target="150">0</h3>
+      <p>Happy Clients</p>
+    </div>
+    <div class="counter-box">
+      <h3 class="counter" data-target="5">0</h3>
+      <p>Years Experience</p>
+    </div>
+    <div class="counter-box">
+      <h3 class="counter" data-target="100">0</h3>
+      <p>Positive Reviews</p>
+    </div>
+  </div>
+</section>
 
 <!-- PORTFOLIO -->
 <section id="portfolio" class="portfolio">
@@ -118,6 +140,25 @@
   </div>
 </section>
 
+<!-- REVIEWS SECTION -->
+<section id="reviews" class="reviews">
+  <h2><span style="color:white;">Client</span> <span>Reviews</span></h2>
+  <div class="review-slider">
+    <div class="review active">
+      <p>“Aamir delivered high-quality leads that helped us close more deals. Highly recommended!”</p>
+      <h4>- John Smith, CEO</h4>
+    </div>
+    <div class="review">
+      <p>“Professional and reliable. The list-building service was top-notch.”</p>
+      <h4>- Sarah Williams, Marketing Manager</h4>
+    </div>
+    <div class="review">
+      <p>“Great communication and timely delivery. Will work again!”</p>
+      <h4>- Michael Brown, Entrepreneur</h4>
+    </div>
+  </div>
+</section>  
+  
 <!-- CONTACT -->
 <section id="contact" class="contact">
   <h2>Get in <span>Touch</span></h2>
