--- a/index.html
+++ b/index.html
@@ -177,9 +177,18 @@
     </div>
   </div>
 
-  <hr>
+  <!-- Contact Form Section -->
+  <div class="footer-contact-form">
+    <h3>Contact Me</h3>
+    <form action="mailto:amirshahzad37925@gmail.com" method="post" enctype="text/plain">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <textarea name="message" rows="4" placeholder="Your Message" required></textarea>
+      <button type="submit">Send <i class="fas fa-paper-plane"></i></button>
+    </form>
+  </div>
 
-  <!-- Middle: Links + Contact Form -->
+  <!-- Middle Links -->
   <div class="footer-main">
     <div class="footer-col">
       <h3>About</h3>
@@ -196,20 +205,9 @@
         <li><a href="#privacy-policy">Privacy Policy</a></li>
       </ul>
     </div>
-
-    <!-- Contact Form -->
-    <div class="footer-col contact-form">
-      <h3>Contact Me</h3>
-      <form action="mailto:amirshahzad37925@gmail.com" method="post" enctype="text/plain">
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="email" placeholder="Your Email" required>
-        <textarea name="message" rows="3" placeholder="Your Message" required></textarea>
-        <button type="submit">Send <i class="fas fa-paper-plane"></i></button>
-      </form>
-    </div>
   </div>
 
-  <!-- Bottom: Social + Copyright -->
+  <!-- Bottom -->
   <div class="footer-bottom">
     <div class="social-icons">
       <a href="https://www.facebook.com/aamir.ibn.al.mazhar" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -221,22 +219,15 @@
     <p>© 2025 Aamir Shahzad | All Rights Reserved | <a href="#privacy-policy">Privacy Policy</a></p>
   </div>
 
-  <!-- Privacy Policy (hidden section) -->
+  <!-- Privacy Policy Section -->
   <section id="privacy-policy" style="display:none; background:#000; padding:20px; margin-top:20px; color:#fff;">
     <h2>Privacy Policy</h2>
     <p>
-      Your privacy is important. Any personal information (like name, email, or messages) shared
-      This website will only be used to respond to your inquiries.  
-      We do not share, sell, or misuse your information in any way.
-    </p>
-    <p>
-      By contacting me, you agree that I can reply using the provided email.  
-      For more details, feel free to reach out at:  
-      <a href="mailto:amirshahzad37925@gmail.com">amirshahzad37925@gmail.com</a>
+      Your privacy is important. Any personal information shared through this site is only used to respond to your inquiries.  
+      We do not share, sell, or misuse your data in any way.
     </p>
   </section>
 </footer>
-
 
 <script>
   window.addEventListener("load", () => {
