--- a/index.html
+++ b/index.html
@@ -177,13 +177,10 @@
     </div>
   </div>
 
-  <!-- Contact Form Section -->
-  <div class="footer-contact-form">
-    <h3>Contact Me</h3>
+  <!-- Center: Sliding Contact Form -->
+  <div class="footer-contact-form hidden">
     <form action="mailto:amirshahzad37925@gmail.com" method="post" enctype="text/plain">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" rows="4" placeholder="Your Message" required></textarea>
+      <input type="email" name="email" placeholder="Enter your email" required>
       <button type="submit">Send <i class="fas fa-paper-plane"></i></button>
     </form>
   </div>
@@ -202,7 +199,7 @@
       <h3>Resources</h3>
       <ul>
         <li><a href="#">Blog</a></li>
-        <li><a href="#privacy-policy">Privacy Policy</a></li>
+        <li><a href="#" id="privacy-link">Privacy Policy</a></li>
       </ul>
     </div>
   </div>
@@ -216,18 +213,23 @@
       <a href="https://medium.com/@amirshahzad37925" target="_blank"><i class="fab fa-medium"></i></a>
       <a href="https://join.skype.com/invite/LkkvzG3eqi7S" target="_blank"><i class="fab fa-skype"></i></a>
     </div>
-    <p>© 2025 Aamir Shahzad | All Rights Reserved | <a href="#privacy-policy">Privacy Policy</a></p>
+    <p>© 2025 Aamir Shahzad | All Rights Reserved | <a href="#" id="privacy-link-bottom">Privacy Policy</a></p>
   </div>
+</footer>
 
-  <!-- Privacy Policy Section -->
-  <section id="privacy-policy" style="display:none; background:#000; padding:20px; margin-top:20px; color:#fff;">
+<!-- Privacy Policy Modal -->
+<div id="privacy-modal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
     <h2>Privacy Policy</h2>
     <p>
-      Your privacy is important. Any personal information shared through this site is only used to respond to your inquiries.  
+      Your privacy is important. Any personal information shared through this site 
+      will only be used to respond to your inquiries.  
       We do not share, sell, or misuse your data in any way.
     </p>
-  </section>
-</footer>
+  </div>
+</div>
+
 
 <script>
   window.addEventListener("load", () => {
