--- a/index.html
+++ b/index.html
@@ -177,11 +177,11 @@
     </div>
   </div>
 
-  <!-- Center: Sliding Contact Form -->
-  <div class="footer-contact-form hidden">
+  <!-- Slim Send Email Bar -->
+  <div class="footer-email-bar hidden">
     <form action="mailto:amirshahzad37925@gmail.com" method="post" enctype="text/plain">
       <input type="email" name="email" placeholder="Enter your email" required>
-      <button type="submit">Send <i class="fas fa-paper-plane"></i></button>
+      <button type="submit">Send Email <i class="fas fa-paper-plane"></i></button>
     </form>
   </div>
 
