--- a/index.html
+++ b/index.html
@@ -277,6 +277,36 @@ document.addEventListener("DOMContentLoaded", () => {
     }
   });
 });
+  
+<script>
+  // Slide-in contact form
+  document.addEventListener("DOMContentLoaded", () => {
+    const contactForm = document.querySelector(".footer-contact-form");
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          contactForm.classList.add("show");
+        }
+      });
+    }, { threshold: 0.3 });
+    observer.observe(contactForm);
+  });
+
+  // Privacy Policy Modal
+  const modal = document.getElementById("privacy-modal");
+  const openLinks = [document.getElementById("privacy-link"), document.getElementById("privacy-link-bottom")];
+  const closeBtn = document.querySelector(".close");
+
+  openLinks.forEach(link => {
+    link.addEventListener("click", (e) => {
+      e.preventDefault();
+      modal.style.display = "block";
+    });
+  });
+
+  closeBtn.onclick = () => modal.style.display = "none";
+  window.onclick = (e) => { if (e.target === modal) modal.style.display = "none"; };
+</script>
 
 </body>
 </html>
