--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
     </div>
   </div>
 
-  <!-- Slim Send Email Bar -->
-  <div class="footer-email-bar hidden">
-    <form action="mailto:amirshahzad37925@gmail.com" method="post" enctype="text/plain">
-      <input type="email" name="email" placeholder="Enter your email" required>
-      <button type="submit">Send Email <i class="fas fa-paper-plane"></i></button>
-    </form>
-  </div>
+  <!-- Slim Email Bar -->
+<div class="footer-email-bar">
+  <form>
+    <input type="email" placeholder="Enter your email" required>
+    <button type="submit">Send Email</button>
+  </form>
+</div>
 
   <!-- Middle Links -->
   <div class="footer-main">
