--- a/index.html
+++ b/index.html
@@ -279,33 +279,44 @@ document.addEventListener("DOMContentLoaded", () => {
 });
   
 <script>
-  // Slide-in contact form
+  // ================= SLIDE-IN EMAIL BAR =================
   document.addEventListener("DOMContentLoaded", () => {
-    const contactForm = document.querySelector(".footer-contact-form");
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          contactForm.classList.add("show");
-        }
-      });
-    }, { threshold: 0.3 });
-    observer.observe(contactForm);
+    const emailBar = document.querySelector(".footer-email-bar");
+    if (emailBar) {
+      const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            emailBar.classList.add("show");
+          }
+        });
+      }, { threshold: 0.3 });
+      observer.observe(emailBar);
+    }
   });
 
-  // Privacy Policy Modal
+  // ================= PRIVACY POLICY MODAL =================
   const modal = document.getElementById("privacy-modal");
-  const openLinks = [document.getElementById("privacy-link"), document.getElementById("privacy-link-bottom")];
+  const openLinks = [
+    document.getElementById("privacy-link"),
+    document.getElementById("privacy-link-bottom")
+  ];
   const closeBtn = document.querySelector(".close");
 
   openLinks.forEach(link => {
-    link.addEventListener("click", (e) => {
-      e.preventDefault();
-      modal.style.display = "block";
-    });
+    if (link) {
+      link.addEventListener("click", (e) => {
+        e.preventDefault();
+        modal.style.display = "block";
+      });
+    }
   });
 
-  closeBtn.onclick = () => modal.style.display = "none";
-  window.onclick = (e) => { if (e.target === modal) modal.style.display = "none"; };
+  if (closeBtn) {
+    closeBtn.onclick = () => modal.style.display = "none";
+  }
+  window.onclick = (e) => { 
+    if (e.target === modal) modal.style.display = "none"; 
+  };
 </script>
 
 </body>
